# opengl-stuff

./: CMakeLists.txt
src/: main.cpp
src/app/: Application.cpp  Application.h
src/utils/: utils.cpp  utils.h
